--- a/src/Templates/Email/registered.html
+++ b/src/Templates/Email/registered.html
@@ -3,5 +3,5 @@
 {% block content %}
   <p>You have registered!</p>
 
-  <p>Activate your account using this link: {{ baseUrl }}{{ urlFor('activate') }}?email={{ user.email }}&identifier={{ identifier|url_encode }}</p>
+  <p>Activate your account using this <a href="{{ baseUrl }}{{ urlFor('activate') }}?email={{ user.email }}&identifier={{ identifier|url_encode }}">link</a>.</p>
 {% endblock %}
