--- a/src/Templates/Email/Password/forgot.html
+++ b/src/Templates/Email/Password/forgot.html
@@ -3,5 +3,5 @@
 {% block content %}
   <p>You requested a password change.</p>
 
-  <p>Click this link to reset your password: {{ baseUrl }}{{ urlFor('password_reset') }}?email={{ user.email }}&identifier={{ identifier|url_encode }}</p>
+  <p>Click this <a href="{{ baseUrl }}{{ urlFor('password_reset') }}?email={{ user.email }}&identifier={{ identifier|url_encode }}">link</a> to reset your password.</p>
 {% endblock %}
