--- a/src/Pages/Article/View/article-view.html
+++ b/src/Pages/Article/View/article-view.html
@@ -8,7 +8,7 @@
 
   <div class="blog-post">
     <h2 class="blog-post-title">{{ article.title|title }}</h2>
-    <p class="blog-post-meta">{{ article.updated_at|time_diff }} by <a href="#">{{ article.user.name|title }}</a></p>
+    <p class="blog-post-meta">{{ article.published_at|time_diff }} by <a href="#">{{ article.user.name|title }}</a></p>
     {{ article.content|raw }}
   </div><!-- /.blog-post -->
 
