--- a/src/Templates/Messages/errors.html
+++ b/src/Templates/Messages/errors.html
@@ -4,7 +4,7 @@
       <span aria-hidden="true">&times;</span>
     </button>
     {% for msg in errors %}
-      * {{ msg }} <br>
+      * &nbsp;{{ msg }} <br>
     {% endfor %}
   </div>
 {% endif %}
