--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
 .actions form {
 	display: inline-block;
 }
+
+.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
+    border: none;
+}
